--- a/PillBox/PillBox/Base.lproj/Main.storyboard
+++ b/PillBox/PillBox/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View-->
+        <!--Prescription List View Controller-->
         <scene sceneID="FZd-z6-BW0">
             <objects>
                 <viewController id="v6Y-ox-DKE" customClass="PrescriptionListViewController" customModule="PillBox" customModuleProvider="target" sceneMemberID="viewController">
@@ -56,6 +56,7 @@
                                                     <connections>
                                                         <action selector="prescriptionTakenBox:" destination="swJ-sO-0w0" eventType="touchUpInside" id="gyX-Kk-D9d"/>
                                                         <action selector="prescriptionTakenBox:" destination="v6Y-ox-DKE" eventType="touchUpInside" id="jmK-mu-UJb"/>
+                                                        <action selector="prescriptionTakenBoxTapped:" destination="swJ-sO-0w0" eventType="touchUpInside" id="zgz-h0-MYJ"/>
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bs1-hg-stX">
@@ -87,11 +88,6 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="v6Y-ox-DKE" id="MpP-gY-sjK"/>
-                                    <outlet property="delegate" destination="v6Y-ox-DKE" id="2hk-lE-OdK"/>
-                                    <outlet property="tableView" destination="v6Y-ox-DKE" id="Vyp-23-uuN"/>
-                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -122,6 +118,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="profileName" destination="yLd-Wd-duQ" id="Kxd-PX-3Ss"/>
                         <outlet property="tableView" destination="YV8-8B-rJN" id="fDQ-qU-caf"/>
                     </connections>
                 </viewController>
@@ -163,7 +160,7 @@
         <!--Add Prescription-->
         <scene sceneID="9XB-e9-sTe">
             <objects>
-                <viewController id="3fb-4T-p2M" sceneMemberID="viewController">
+                <viewController id="3fb-4T-p2M" customClass="AddPrescriptionViewController" customModule="PillBox" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F57-CN-jBB">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -223,6 +220,9 @@
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="4WK-CX-Vv0">
                                                 <rect key="frame" x="43" y="0.0" width="51" height="31"/>
+                                                <connections>
+                                                    <action selector="toggleAm:" destination="3fb-4T-p2M" eventType="valueChanged" id="OMV-uc-qYs"/>
+                                                </connections>
                                             </switch>
                                         </subviews>
                                     </stackView>
@@ -237,6 +237,9 @@
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="l6I-tc-Fzq">
                                                 <rect key="frame" x="41" y="0.0" width="51" height="31"/>
+                                                <connections>
+                                                    <action selector="togglePm:" destination="3fb-4T-p2M" eventType="valueChanged" id="9yx-HW-mQ0"/>
+                                                </connections>
                                             </switch>
                                         </subviews>
                                     </stackView>
@@ -246,6 +249,9 @@
                                 <rect key="frame" x="150" y="677" width="114" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Add Prescription"/>
+                                <connections>
+                                    <action selector="addPrescriptionTapped:" destination="3fb-4T-p2M" eventType="touchUpInside" id="L17-IU-g7G"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -266,6 +272,14 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Add Prescription" id="FIY-xP-SDG"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="dosageTextField" destination="95C-aT-Uvd" id="YyV-ap-IAo"/>
+                        <outlet property="frequencyTextField" destination="5ed-93-Aeh" id="Cfy-GS-r0c"/>
+                        <outlet property="notesTextView" destination="bG9-yh-rAS" id="aQY-aF-PvO"/>
+                        <outlet property="prescriptionNameTextField" destination="cub-AJ-SJX" id="pV5-iE-WsI"/>
+                        <outlet property="toggleAmSwitch" destination="4WK-CX-Vv0" id="TFV-tD-a1q"/>
+                        <outlet property="togglePmSwitch" destination="l6I-tc-Fzq" id="hey-e3-h2S"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FrW-tW-lWk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
